<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#F5F5F5"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tugas Praktikum"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#1976D2"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/btnKalkulator"
        style="@style/MainMenuButton"
        android:text="@string/kalkulator"
        android:backgroundTint="#2196F3"/>

    <Button
        android:id="@+id/btnLuasBangunDatar"
        style="@style/MainMenuButton"
        android:text="@string/luas_bangun_datar"
        android:backgroundTint="#4CAF50"/>

    <Button
        android:id="@+id/btnIntent"
        style="@style/MainMenuButton"
        android:text="@string/intent"
        android:backgroundTint="#AF5B4C"/>

    <Button
        android:id="@+id/btnIdentitas"
        style="@style/MainMenuButton"
        android:text="@string/identitas"
        android:backgroundTint="#FF9800"/>

    <Button
        android:id="@+id/btnView"
        style="@style/MainMenuButton"
        android:text="@string/view"
        android:backgroundTint="@color/black"/>

    <Button
        android:id="@+id/btnViewGroup"
        style="@style/MainMenuButton"
        android:text="@string/view_group"
        android:backgroundTint="#1CB1AD"/>

    <Button
        android:id="@+id/btnSoundEffect"
        style="@style/MainMenuButton"
        android:text="@string/sound_effect"
        android:backgroundTint="#E91E63"/>

</LinearLayout>
